# Software-Development-for-Algorithmic-Problems

./: CMakeLists.txt  README.md  input.json  main.cpp  output.json
Project1/: README.md  main.cpp
Project1/includes/: ActionFunctions.h  MyTriangulation.h  Parsing.h  PolygonManipulation.h
Project1/src/: ActionFunctions.cpp  Parsing.cpp  PolygonManipulation.cpp
Project2/: CMakeLists.txt  input.json  input_ant.json  input_sa.json  instance_2.json  instance_3.json  instance_4.json  instance_5.json  instance_7.json  main.cpp  output.json  parameter_report.txt
Project2/include/: ActionFunctions.h  Parsing.h  PolygonManipulation.h  Triangulation.h
Project2/includes/: ActionFunctions.h  MyTriangulation.h  OptimizationMethods.h  Parsing.h  PolygonManipulation.h  draw.h
Project2/src/: ActionFunctions.cpp  MyTriangulation.cpp  OptimizationMethods.cpp  Parsing.cpp  PolygonManipulation.cpp  Triangulation.cpp
Project3/: CMakeLists.txt  README.md  final_results.csv  input.json  input_sa.json  instance_1.json  instance_6.json  main.cpp  output.json  run_experiments.py
Project3/includes/: ActionFunctions.h  MyTriangulation.h  OptimizationMethods.h  Parsing.h
Project3/scripts/: final_results.csv  run_experiments.py
Project3/scripts_and_output/output/results/: best_results.csv  parameter_testing.txt  results_all_combinations.csv
Project3/scripts_and_output/output/summaries/: best_combo_per_category.csv  best_method_per_category.csv  category_summary.csv  method_category_summary.csv  method_performance.csv  method_steiner_summary.csv  randomization_impact_summary.csv  randomization_summary.csv
Project3/scripts_and_output/scripts/: analyze_data.py  run_best_output.py  run_experiments.py
Project3/src/: ActionFunctions.cpp  MyTriangulation.cpp  OptimizationMethods.cpp  Parsing.cpp
include/: parsing.h
includes/: ActionFunctions.h  MyTriangulation.h  Parsing.h  PolygonManipulation.h  draw.h  dtriangulation.h  edgeflip.h  parsing.h  rboundary.h  xtrconstraints.h
src/: ActionFunctions.cpp  MyTriangulation.cpp  Parsing.cpp  PolygonManipulation.cpp  dtriangulation.cpp  edgeflip.cpp  main.cpp  parsing.cpp  rboundary.cpp  xtrconstraints.cpp
